--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -22,8 +22,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
+<!--                 <li><a href="https://www.udacity.com/">Made with Udacity</a></li> -->
+                <li><a href="https://gist.github.com/jkarakas">Contact</a></li>
             </ul>
         </div>
     </div>
